caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unclosed_type_paren.caffeine
Blueprints
  "test" success_rate(x):
    Requiring { field: List(String }
    signals { value: "x" }
